[package]
name = "jacquard-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Shared test support for Jacquard integration and end-to-end coverage"

[lints]
workspace = true

[features]
default = []
reference-client-e2e = ["dep:jacquard-reference-client"]
topology-full = ["dep:jacquard-batman-classic", "dep:jacquard-field", "dep:jacquard-scatter"]

[dependencies]
jacquard-adapter = { path = "../adapter", version = "0.4.0" }
jacquard-babel = { path = "../babel", version = "0.4.0" }
jacquard-core = { path = "../core", version = "0.4.0" }
jacquard-mem-link-profile = { path = "../mem-link-profile", version = "0.4.0" }
jacquard-mem-node-profile = { path = "../mem-node-profile", version = "0.4.0" }
jacquard-router = { path = "../router", version = "0.4.0" }
jacquard-traits = { path = "../traits", version = "0.4.0" }
jacquard-batman-bellman = { path = "../batman-bellman", version = "0.4.0" }
jacquard-olsrv2 = { path = "../olsrv2", version = "0.4.0" }
jacquard-pathway = { path = "../pathway", version = "0.4.0" }
jacquard-batman-classic = { path = "../batman-classic", version = "0.4.0", optional = true }
jacquard-field = { path = "../field", version = "0.4.0", optional = true }
jacquard-scatter = { path = "../scatter", version = "0.4.0", optional = true }
jacquard-reference-client = { path = "../reference-client", version = "0.4.0", optional = true }
