[package]
name = "jacquard-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Routing trait definitions for Jacquard"

[lints]
workspace = true

[dependencies]
jacquard-core = { path = "../core", version = "0.4.0" }
jacquard-macros = { path = "../macros", version = "0.4.0" }
blake3 = "1"
rust-toolkit-effects = { workspace = true }

[dev-dependencies]
jacquard-mem-link-profile = { path = "../mem-link-profile" }
trybuild = "1"
