[package]
name = "jacquard-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Routing trait definitions for Jacquard"

[lints]
workspace = true

[features]
default = ["std"]
std = ["blake3/std", "jacquard-core/std"]

[dependencies]
jacquard-core = { path = "../core", version = "0.9.0", default-features = false }
jacquard-macros = { path = "../macros", version = "0.9.0" }
blake3 = { version = "1", default-features = false }

[dev-dependencies]
jacquard-mem-link-profile = { path = "../mem-link-profile" }
trybuild = "1"
