# Dylint lint library — requires nightly (just nightly-shell) and cargo-dylint (install-dylint).
# Run: cargo dylint --path lints/model_policy --all -- --all-targets
#
# Current lints: handle-like public model types must carry #[must_use_handle].

[package]
name = "jacquard-model-policy"
version = "0.1.0"
edition = "2021"
publish = false
description = "Dylint checks for Jacquard shared model annotation policy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = "5.0.0"

[features]
rlib = ["dylint_linting/constituent"]

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
