# Dylint lint library — requires nightly (just nightly-shell) and cargo-dylint (install-dylint).
# Run: cargo dylint --path lints/model_policy --all -- --all-targets
#
# Current lints:
#   handle-like public model types must carry #[must_use_handle]
#   shared crates must not define engine-specific public vocabulary
#   world-extension boundaries must not mention RouteError
#   function bodies must stay within 60 source lines unless an
#     explicit `// long-block-exception: <reason>` marker is present
#   source files must stay within 1000 lines unless an explicit
#     `// long-file-exception: <reason>` marker is present

[package]
name = "jacquard-model-policy"
version = "0.1.0"
edition = "2021"
publish = false
description = "Dylint checks for Jacquard workspace policy, including shared-model annotations and the long-block ceiling"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = { git = "https://github.com/trailofbits/dylint.git", rev = "4bd91ce7729b74c7ee5664bbb588f7baf30b4a09", package = "dylint_linting" }
regex = "1"

[features]
rlib = ["dylint_linting/constituent"]

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
